# ARCHER

./: .env.example  .gitignore  Makefile  README.md  banner.txt  pyproject.toml
archer/: __init__.py
archer/contexts/: __init__.py
archer/contexts/intake/: __init__.py  extraction_patterns.py  job_data_structure.py  job_parser.py  job_registry.py  metadata_extractor.py  metadata_llm.py  nomenclature.py  normalizer.py  patterns.py  section_patterns.py
archer/contexts/rendering/: README.md  __init__.py  compiler.py  dependencies.txt  layout_diagnostics.py  logger.py  validator.py
archer/contexts/targeting/: README.md  __init__.py
archer/contexts/templating/: README.md  __init__.py  config_resolver.py  converter.py  defaults.py  dependencies.txt  document.tex.jinja.explained  exceptions.py  latex_generator.py  latex_parser.py  latex_pattern_assumptions.md  latex_patterns.py  logger.py  markdown_formatter.py  normalizer.py  parser.py  (+8 more)
archer/utils/: __init__.py  clean_latex.py  dependencies.txt  event_logging.py  latex_cleaner.py  latex_parsing_tools.py  llm.py  logger.py  logging.py  markdown.py  pdf_processing.py  report_formatter.py  resume_analyzer.py  resume_registry.py  text_processing.py  timestamp.py  token_processing.py
configs/: nomenclature.yaml  resume_presets.yaml
data/figs/: .gitkeep
data/resume_archive/: _test_Res202511_Fry_MomCorp.tex  _test_Res202511_Fry_MomCorp_finetuned.tex
docs/: DIRECTORY_STRUCTURE.md  Design_Decisions.md  JOB_LISTING_CLASS.md  LAYOUT_DIAGNOSTICS_REFERENCE.md  LOGGING_ARCHITECTURE.md  OPERATION_BASED_PARSING.md  ORCHESTRATION_AND_CLI_PATTERNS.md  PIPELINE_EVENTS_REFERENCE.md  RESUME_DOCUMENT_CLASS.md  RESUME_STATUS_REFERENCE.md  TEST_RESUME_DEMO.md
notebooks/: resume_analysis_demo.ipynb  resume_data_structure_demo.ipynb  resume_database_demo.ipynb  step4_page_structure_demo.ipynb  step5_document_metadata_demo.ipynb  step6_two_page_demo.ipynb  step7_complete_document_demo.ipynb  template_bidirectional_demo.ipynb
outs/logs/: resume_registry.csv
scripts/: analyze_resume_patterns.py  apply_presets.py  build_resume_database.py  check_dependencies.sh  clean_all_resumes.py  clean_resume.py  compile_pdf.py  convert_template.py  diff_notebooks.py  format_job.py  latex_to_yaml.py  manage_registry.py  normalize_latex.py  process_all_resumes.py  process_resume.py  remove_lines.sh  remove_lines_multifile.sh  tail_log.py  test_roundtrip.py  validate_job.py
tests/: ResumeStructureTesting.md  __init__.py
tests/integration/: __init__.py  test_bottom_bar.py  test_document_metadata.py  test_education.py  test_personality_alias_array.py  test_rendering_integration.py  test_single_page.py  test_skill_categories.py  test_skill_list_caps.py  test_skill_list_pipes.py  test_two_page.py  test_work_experience.py
tests/unit/: __init__.py  test_latex_parsing_tools.py  test_template_registry.py  test_to_plaintext_improvements.py
(+99 files in other folders)
